@@ -20,7 +20,7 @@ logger = logging.getLogger(__name__)
 ffi = openrlib.ffi
 
 # TODO: How can I reliably get MAX_INT from limits.h ?
-_MAX_INT = 2**32-1
+_MAX_INT: int = 2**32-1
 
 _R_PRESERVED = dict()  # type: typing.Dict[int, int]
 _PY_PASSENGER = dict()
@@ -289,10 +289,10 @@ def _string_getitem(cdata: FFI.CData, i: int) -> typing.Optional[str]:
 
 
 # TODO: still used ?
-def _string_setitem(cdata: FFI.CData, i: int, value_b) -> None:
+def _string_setitem(cdata: FFI.CData, i: int, CE: int, value_b) -> None:
     rlib = openrlib.rlib
     rlib.SET_STRING_ELT(
-        cdata, i, rlib.Rf_mkCharCE(value_b, conversion._CE_DEFAULT_VALUE)
+        cdata, i, rlib.Rf_mkCharCE(value_b, CE)
     )
 
 
